--- a/src/CallButton.css
+++ b/src/CallButton.css
@@ -4,26 +4,28 @@
     color: white;
     cursor: pointer;
     border-radius: 50%;
-    height: 100px;
-    width: 100px;
+    height: 60px;
+    width: 60px;
     position: absolute;
-    bottom: 50px;
-    left: 50%;
     transform: translateX(-50%);
-    font-size: 1.5em;
+    font-size: 1em;
+    position: fixed;
+    top: 10px;
+    right: 10px;
   }
 
-  .end-botton {
+  .call-botton-end {
     background-color: red;
     padding: 20px 20px;
     color: white;
     cursor: pointer;
     border-radius: 50%;
-    height: 100px;
-    width: 100px;
+    height: 60px;
+    width: 60px;
     position: absolute;
-    bottom: 50px;
-    left: 50%;
     transform: translateX(-50%);
-    font-size: 1.5em;
+    font-size: 1em;
+    position: fixed;
+    top: 10px;
+    right: 10px;
   }
